Updated the assignment

--- a/02_activities/assignments/assignment_1.ipynb
+++ b/02_activities/assignments/assignment_1.ipynb
@@ -26,19 +26,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             Date       Open       High        Low      Close  Adj Close  \\\n",
+      "ticker                                                                     \n",
+      "A      2000-01-03  56.330471  56.464592  48.193848  51.502148  43.613007   \n",
+      "A      2000-01-04  48.730328  49.266811  46.316166  47.567955  40.281456   \n",
+      "A      2000-01-05  47.389126  47.567955  43.141991  44.617310  37.782787   \n",
+      "A      2000-01-06  44.080830  44.349072  41.577251  42.918453  36.344173   \n",
+      "A      2000-01-07  42.247852  47.165592  42.203148  46.494991  39.372852   \n",
+      "\n",
+      "         Volume       sector                       subsector  year  \n",
+      "ticker                                                              \n",
+      "A       4674353  Health Care  Life Sciences Tools & Services  2000  \n",
+      "A       4765083  Health Care  Life Sciences Tools & Services  2000  \n",
+      "A       5758642  Health Care  Life Sciences Tools & Services  2000  \n",
+      "A       2534434  Health Care  Life Sciences Tools & Services  2000  \n",
+      "A       2819626  Health Care  Life Sciences Tools & Services  2000  \n"
+     ]
+    }
+   ],
    "source": [
     "# Write your code below.\n",
-    "\n"
+    "\n",
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Load environment variables from .env file\n",
+    "load_dotenv()\n",
+    "\n",
+    "# Get the PRICE_DATA environment variable\n",
+    "price_data_path = os.getenv('PRICE_DATA')\n",
+    "\n",
+    "if price_data_path:\n",
+    "    # Load the parquet file into a pandas DataFrame\n",
+    "    df = pd.read_parquet(price_data_path)\n",
+    "    \n",
+    "    # Display the first few rows of the DataFrame\n",
+    "    print(df.head())\n",
+    "else:\n",
+    "    print(\"PRICE_DATA environment variable not set.\")\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\14372\\miniconda3\\envs\\dsi_participant\\lib\\site-packages\\dask\\dataframe\\_pyarrow_compat.py:17: FutureWarning: Minimal version of pyarrow will soon be increased to 14.0.1. You are using 11.0.0. Please consider upgrading.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "import dask\n",
     "dask.config.set({'dataframe.query-planning': True})\n",
@@ -59,12 +108,47 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Parquet files found in PRICE_DATA directory:\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "from glob import glob\n",
     "\n",
     "# Write your code below.\n",
+    "\n",
+    "# Import necessary libraries\n",
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "import glob\n",
+    "\n",
+    "# Specify the path to your .env file\n",
+    "dotenv_path = 'c:/Users/4372/scaling_to_production/01_materials/.env'\n",
+    "\n",
+    "# Load environment variables from the specified .env file\n",
+    "load_dotenv(dotenv_path=dotenv_path)\n",
+    "\n",
+    "# Get the PRICE_DATA environment variable\n",
+    "price_data_dir = os.getenv('PRICE_DATA')\n",
+    "\n",
+    "# Check if the PRICE_DATA variable is set\n",
+    "if price_data_dir:\n",
+    "    # Use glob to find all parquet files in the directory\n",
+    "    parquet_files = glob.glob(os.path.join(price_data_dir, '*.parquet'))\n",
+    "\n",
+    "    # Display the list of parquet files found\n",
+    "    print(\"Parquet files found in PRICE_DATA directory:\")\n",
+    "    for file in parquet_files:\n",
+    "        print(file)\n",
+    "else:\n",
+    "    print(\"PRICE_DATA environment variable not set.\")\n",
+    "\n",
     "\n"
    ]
   },
@@ -90,12 +174,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\14372\\AppData\\Local\\Temp\\ipykernel_14568\\3411697288.py:6: UserWarning: `meta` is not specified, inferred from partial data. Please provide `meta` if the result is unexpected.\n",
+      "  Before: .apply(func)\n",
+      "  After:  .apply(func, meta={'x': 'f8', 'y': 'f8'}) for dataframe result\n",
+      "  or:     .apply(func, meta=('x', 'f8'))            for series result\n",
+      "  ddf['Close'] = ddf.groupby('ticker')['Close'].shift(1)\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code below.\n",
-    "\n"
+    "import dask.dataframe as dd\n",
+    "\n",
+    "data_path = r'C:\\Users\\14372\\scaling_to_production\\05_src\\data\\temp\\stock_px.csv'\n",
+    "ddf = dd.read_csv(data_path)\n",
+    "\n",
+    "ddf['Close'] = ddf.groupby('ticker')['Close'].shift(1)\n",
+    "\n",
+    "ddf['returns'] = (ddf['Close'] / ddf['Close']) - 1\n",
+    "\n",
+    "ddf['hi_lo_range'] = ddf['High'] - ddf['Low']\n",
+    "dd_feat = ddf[['ticker', 'Date', 'Close', 'returns', 'hi_lo_range']]"
    ]
   },
   {
@@ -111,12 +216,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    returns  rolling_avg_return\n",
+      "0      0.01                 NaN\n",
+      "1      0.02                 NaN\n",
+      "2     -0.01                 NaN\n",
+      "3      0.03                 NaN\n",
+      "4      0.04                 NaN\n",
+      "5     -0.02                 NaN\n",
+      "6      0.01                 NaN\n",
+      "7      0.05                 NaN\n",
+      "8      0.03                 NaN\n",
+      "9      0.02               0.018\n",
+      "10     0.01               0.018\n",
+      "11    -0.01               0.015\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code below.\n",
-    "\n"
+    "import dask.dataframe as dd\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Example Dask DataFrame\n",
+    "data = {'returns': [0.01, 0.02, -0.01, 0.03, 0.04, -0.02, 0.01, 0.05, 0.03, 0.02, 0.01, -0.01]}\n",
+    "ddf = dd.from_pandas(pd.DataFrame(data), npartitions=2)\n",
+    "\n",
+    "# Convert to pandas DataFrame\n",
+    "pdf = ddf.compute()\n",
+    "\n",
+    "# Add rolling average return calculation\n",
+    "pdf['rolling_avg_return'] = pdf['returns'].rolling(window=10).mean()\n",
+    "\n",
+    "print(pdf)"
    ]
   },
   {
@@ -129,6 +266,24 @@
     "+ Would it have been better to do it in Dask? Why?\n",
     "\n",
     "(1 pt)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "No, it was not at all necessary to convert to Pandas to calculate the moving average return. Dask DataFrames are designed to handle large datasets that do not fit into memory and provide a similar interface to Pandas. Operations such as calculating a moving average can be performed directly on a Dask DataFrame without needing to convert it to a Pandas DataFrame."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Yes, it would have been better to perform the calculation in Dask if you are working with large datasets. Here are the reasons:\n",
+    "\n",
+    "1. Scalability: Dask can handle larger-than-memory datasets by parallelizing the computation across multiple cores or even a distributed cluster. This makes it suitable for large datasets where Pandas would be limited by available memory.\n",
+    "2. Performance: By leveraging parallelism, Dask can potentially speed up computations compared to Pandas, which operates on a single core.\n",
+    "3. Memory Efficiency: Dask processes data in chunks, which allows it to manage memory usage more efficiently than Pandas."
    ]
   },
   {
@@ -185,7 +340,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.9.15"
   }
  },
  "nbformat": 4,
